--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -150,7 +150,7 @@ input:invalid {
 }
 
 .register-link a , .login-link a {
-    color: blue;
+    color: black;
     text-decoration: none;
 }
 
@@ -175,23 +175,38 @@ button:hover {
     background:darkred;
 }
 
+/* Button focus styling */
 button:focus {
     outline: none;
     box-shadow: 0 0 0 3px rgba(255,0,0,0.5);
 }
 
-/* Forgot password link styling */
-.forgot-password-link {
-    margin-top: 10px;
+.remember-forgot-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.remember-me-container {
+    display: flex;
+    align-items: center;
     color: white;
 }
 
-.forgot-password-link a {
-    color: blue;
-    text-decoration: none;
+.remember-me-container input {
+    margin-right: 5px;
+    width: 20px;
+    height: 20px;
+    accent-color: black;
 }
 
-.forgot-password-link a:hover {
+.forgot-password-link {
+    color: black; /* Changed to black */
+    text-decoration: none;
+    margin-top: -5px;
+}
+
+.forgot-password-link:hover {
     text-decoration: underline;
 }
 
